--- a/src/example_xsctcf.conf
+++ b/src/example_xsctcf.conf
@@ -1,4 +1,6 @@
 # XSCTCF CONFIG 
+# Be sure each line has an equal sign otherwise the program will segfault
+# Any unspecified values will use the default ones
 
 # MIN TEMP
 USER_MIN = 3500
@@ -9,11 +11,17 @@ USER_MAX = 6000
 # BRIGHTNESS
 USER_BRIGHT = 1.0
 
-# TIME IN HOURS FOR MORNING
+# TIME IN HOURS FOR MORNING IN 24hr
 MORNING_TIME = 10   
 
-# TIME IN HOURS FOR NIGHT
+# TIME IN MIN FOR MORNING 
+MORNING_TIME_MINUTES = 0
+
+# TIME IN HOURS FOR NIGHT IN 24hr
 NIGHT_TIME = 22
+
+# TIME IN MIN FOR NIGHT
+NIGHT_TIME_MINUTES = 0
 
 # SLEEP TINE BETWEEN CHECKS IN SECONDS
 TIME_SLEEP = 10
